# jogo_quente_frio

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/jogo_quente_frio/: emotiv_reader.h  jogo_quente_frio_def.h
include/wisard/: PyWISARD.py  pyppm.py
include/wisard/classe1_reconhecimento/: classe1_reconhecimento_1.ppm  classe1_reconhecimento_2.ppm  classe1_reconhecimento_3.ppm
include/wisard/classe1_treino/: classe1_treino_1.ppm  classe1_treino_2.ppm  classe1_treino_3.ppm  classe1_treino_4.ppm
include/wisard/classe2_reconhecimento/: classe2_reconhecimento_1.ppm  classe2_reconhecimento_2.ppm
include/wisard/classe2_treino/: classe2_treino_1.ppm  classe2_treino_2.ppm  classe2_treino_3.ppm
launch/: jogo_quente_frio.launch  reconhece_imagens.launch  salva_fotos.launch
src/: emotiv_reader.cpp  image.py  image_rec.py  image_rec.py.base  imagem.py  jogo_quente_frio (cópia).cpp  jogo_quente_frio.cpp  mensagem_quente_frio.cpp  mostra_foto.cpp  reconhece_imagens.cpp  salva_fotos.cpp
